# ai-express

./: CMakeLists.txt  README.md  deploy.sh  run.sh
doc/doctrees/: environment.pickle  index.doctree
doc/doctrees/.repo/repo/: README.doctree  SUBMITTING_PATCHES.doctree
doc/doctrees/BuildAll/: README.doctree  README_external.doctree  README_external_dt.doctree  index.doctree
doc/doctrees/BuildAll/cmake/: README.doctree  ndk_links.doctree
doc/doctrees/BuildAll/doc/: ABSTRACT.doctree  copyright.doctree  faq.doctree  overview.doctree  quick_start.doctree  solution.doctree  tools.doctree  version.doctree  xproto.doctree  xstream-python-workflow.doctree  xstream_ai.doctree  xstream_guide.doctree  xstream_more.doctree  xstream_tutorials.doctree
doc/doctrees/ai_express_release/: README.doctree
doc/doctrees/ai_express_release/webservice/: README.doctree
doc/doctrees/cmake/: README.doctree  ndk_links.doctree
doc/doctrees/common/bpu-predict/: CONTRIBUTING.doctree  README.doctree
doc/doctrees/common/camera_calibration/: README.doctree
doc/doctrees/common/hobotsdk/: README.doctree
doc/doctrees/common/multi_obj_tracking/: README.doctree
doc/doctrees/common/pybind11/: CONTRIBUTING.doctree  ISSUE_TEMPLATE.doctree  README.doctree
doc/doctrees/common/road_model/: README.doctree
doc/doctrees/common/roadside_perception/: README.doctree
doc/doctrees/common/v2r/: README.doctree
doc/doctrees/common/vehicle_behavior/: README.doctree
doc/doctrees/common/viowrapper/: README.doctree
doc/doctrees/models/: README.doctree
doc/doctrees/models/aidi-openapi/: README.doctree
doc/doctrees/webservice/: README.doctree
doc/doctrees/x2_prebuilt/: README.doctree
doc/doctrees/x3_prebuilt/: README.doctree
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
doc/html/BuildAll/: README.html  README_external.html  README_external_dt.html  index.html
doc/html/_sources/: index.rst.txt
doc/html/_static/: documentation_options.js
doc/html/ai_express_release/: README.html
doc/html/cmake/: README.html  ndk_links.html
doc/html/models/: README.html
doc/html/webservice/: README.html
doc/html/x2_prebuilt/: README.html
doc/html/x3_prebuilt/: README.html
models/x2/vid/so/: vid.hbm  (+2 more)
source/common/xproto/framework/: CMakeLists.txt
source/common/xproto/framework/include/xproto/message/pluginflow/: flowmsg.h
source/common/xproto/framework/include/xproto/utils/: profile.h
source/common/xproto/framework/sample/: CMakeLists.txt
source/common/xproto/framework/test/: CMakeLists.txt
source/common/xstream/media_codec/test/: CMakeLists.txt  media_codec_test.cpp
source/common/xstream/media_codec/test/include/: media_codec_test.h
source/solution_zoo/body/: CMakeLists.txt  main.cpp  method_factory.cpp
source/solution_zoo/body/configs/: age_gender.json  behavior_detection.json  body_detection.json  box_filter_config.json  box_filter_config_12M.json  box_filter_config_2M.json  box_filter_config_8M.json  fall_det.json  gesture_det.json  gesture_voting.json  hand_lmk.json
source/solution_zoo/face/: CMakeLists.txt  main.cpp
source/solution_zoo/video_box/: CMakeLists.txt
webservice/html/: index.html
webservice/html/modules/: index.html  main.css  main.js
webservice/html/utils/: h-canvas.js
(+851 files in other folders)
